# gapcoin

./: .gitmodules  COPYING  INSTALL  Makefile.am  README.md  configure.ac
contrib/: README.md  gapcoin-qt.pro  gapcoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  gapcoin-qt.desktop  gapcoin-qt.install  gapcoin-qt.lintian-overrides  gapcoin-qt.protocol  gapcoind.bash-completion  gapcoind.examples  gapcoind.install  gapcoind.lintian-overrides  gapcoind.manpages  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-gapcoin.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: bluematt-key.pgp  linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: DS_Store  README.md  background.psd  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  example-config.cfg  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/test-patches/: temp-revert-2.patch
contrib/testgen/: README.md  base58.py  gen_base58_test_vectors.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  bootstrap.md  build-msw.md  build-osx.md  build-unix.md  coding.md  gitian-building.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md  release-notes-0.9.0.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-gapcoind-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  send.sh  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi.in  ui.rc
share/certs/: BitcoinFoundation_Apple_Cert.pem  BitcoinFoundation_Comodo_Cert.pem  PrivateKeyNotes.md
share/pixmaps/: gapcoin128.xpm  gapcoin16.xpm  gapcoin256.xpm  gapcoin32.xpm  gapcoin64.xpm
share/qt/: Info.plist.in  extract_strings_qt.py  make_windows_icon.sh
src/: Makefile.am  Makefile.include  addrman.h  alert.h  allocators.h  base58.cpp  base58.h  bignum.h  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  clientversion.h  coins.h  compat.h  core.cpp  core.h  db.h  gapcoin-cli-res.rc  gapcoin-cli.cpp  gapcoind-res.rc  gapcoind.cpp  hash.h  init.cpp  init.h  key.h  keystore.h  leveldbwrapper.h  limitedmap.h  main.cpp  main.h  miner.cpp  miner.h  mruset.h  net.cpp  net.h  netbase.h  noui.cpp  noui.h  (+31 more)
src/compat/: glibc_compat.cpp
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: gapcoin_find_bdb48.m4  gapcoin_qt.m4  gapcoin_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  gapcoin.cpp  gapcoin.qrc  gapcoinaddressvalidator.cpp  gapcoinaddressvalidator.h  gapcoinamountfield.cpp  gapcoinamountfield.h  gapcoingui.cpp  gapcoingui.h  gapcoinstrings.cpp  gapcoinunits.cpp  gapcoinunits.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macdockiconhandler.mm  macnotificationhandler.mm  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  paymentrequest.proto  paymentserver.cpp  paymentserver.h  qvalidatedlineedit.cpp  receivecoinsdialog.cpp  receivecoinsdialog.h  receiverequestdialog.cpp  recentrequeststablemodel.cpp  recentrequeststablemodel.h  (+20 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: gapcoin_ach.ts  gapcoin_af_ZA.ts  gapcoin_ar.ts  gapcoin_be_BY.ts  gapcoin_bg.ts  gapcoin_bs.ts  gapcoin_ca.ts  gapcoin_ca@valencia.ts  gapcoin_ca_ES.ts  gapcoin_cmn.ts  gapcoin_cs.ts  gapcoin_cy.ts  gapcoin_da.ts  gapcoin_de.ts  gapcoin_el_GR.ts  gapcoin_en.ts  gapcoin_eo.ts  gapcoin_es.ts  gapcoin_es_CL.ts  gapcoin_es_DO.ts  gapcoin_es_MX.ts  gapcoin_es_UY.ts  gapcoin_et.ts  gapcoin_eu_ES.ts  gapcoin_fa.ts  gapcoin_fa_IR.ts  gapcoin_fi.ts  gapcoin_fr.ts  gapcoin_fr_CA.ts  gapcoin_gl.ts  gapcoin_gu_IN.ts  gapcoin_he.ts  gapcoin_hi_IN.ts  gapcoin_hr.ts  gapcoin_hu.ts  gapcoin_id_ID.ts  gapcoin_it.ts  gapcoin_ja.ts  gapcoin_ka.ts  gapcoin_kk_KZ.ts  (+31 more)
src/qt/res/: gapcoin-qt-res.rc
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  canonical_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  hmac_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  script_P2SH_tests.cpp  (+9 more)
(+9 files in other folders)
